src/cbPyLib/cellbrowser/cbWeb/css/darkMode.css
/* ... */
.popover-title {
  background-color: #080808;
  border-bottom: 1px solid #141414
}

.popover.top>.arrow {
  border-top-color: #666;
  border-top-color: rgba(1, 1, 1, .25)
}

.popover.top>.arrow:after {
  border-top-color: #000
}

.popover.right>.arrow {
  border-right-color: #666;
  border-right-color: rgba(1, 1, 1, .25)
}

.popover.right>.arrow:after {
  border-right-color: #000
}

.popover.bottom>.arrow {
  border-bottom-color: #666;
  border-bottom-color: rgba(1, 1, 1, .25)
}

.popover.bottom>.arrow:after {
  border-bottom-color: #000
}

.popover.left>.arrow {
  border-left-color: #666;
  border-left-color: rgba(1, 1, 1, .25)
}

.popover.left>.arrow:after {
  border-left-color: #000
}

.carousel-control {
  color: #000;
  text-shadow: 0 1px 2px rgba(1, 1, 1, .6);
  background-color: rgba(1, 1, 1, 0)
}

.carousel-control:focus,
.carousel-control:hover {
  color: #000
}

.carousel-indicators .active {
  background-color: #000
}

.carousel-caption {
  color: #000
}

/* Changes for ext/introjs.2.4.0.min.css */
.introjs-overlay {
  background-color: #fff;
  background: -moz-radial-gradient(center, ellipse cover, rgba(1, 1, 1, 0.4) 0, rgba(1, 1, 1, 0.9) 100%);
  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(1, 1, 1, 0.4)), color-stop(100%, rgba(1, 1, 1, 0.9)));
  background: -webkit-radial-gradient(center, ellipse cover, rgba(1, 1, 1, 0.4) 0, rgba(1, 1, 1, 0.9) 100%);
  background: -o-radial-gradient(center, ellipse cover, rgba(1, 1, 1, 0.4) 0, rgba(1, 1, 1, 0.9) 100%);
  background: -ms-radial-gradient(center, ellipse cover, rgba(1, 1, 1, 0.4) 0, rgba(1, 1, 1, 0.9) 100%);
  background: radial-gradient(center, ellipse cover, rgba(1, 1, 1, 0.4) 0, rgba(1, 1, 1, 0.9) 100%)
}

.introjs-disableInteraction {
  background-color: black
}

.introjs-helperLayer {
  background-color: #000;
  background-color: rgba(0, 0, 0, .9);
  border: 1px solid rgba(1, 1, 1, .5);
  box-shadow: 0 2px 15px rgba(1, 1, 1, .4)
}

.introjs-helperNumberLayer {
  color: black;
  text-shadow: 1px 1px 1px rgba(1, 1, 1, .3);
  border: 3px solid black;
  box-shadow: 0 2px 5px rgba(1, 1, 1, .4)
}

.introjs-arrow {
  border: 5px solid black
}

.introjs-arrow.top {
  border-bottom-color: black
}

.introjs-arrow.top-right {
  border-bottom-color: black
}

.introjs-arrow.top-middle {
  border-bottom-color: black
}

.introjs-arrow.right {
  border-left-color: black
}

.introjs-arrow.right-bottom {
  border-left-color: black
}

.introjs-arrow.bottom {
  border-top-color: black
}

.introjs-arrow.left {
  border-right-color: black
}

.introjs-arrow.left-bottom {
  border-right-color: black
}

.introjs-tooltip {
  background-color: black;
  box-shadow: 0 1px 10px rgba(1, 1, 1, .4)
}

.introjs-button {
  border: 1px solid #2b2b2b;
  text-shadow: 1px 1px 0 #000;
  color: #ccc;
  background-color: #131313;
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0b0b0b), to(#131313));
  background-image: -moz-linear-gradient(#0b0b0b, #131313);
  background-image: -o-linear-gradient(#0b0b0b, #131313);
  background-image: linear-gradient(#0b0b0b, #131313)
}

.introjs-button:hover {
  border-color: #434343;
  box-shadow: 0 1px 1px #282828
}

.introjs-button:focus,
.introjs-button:active {
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#131313), to(#0b0b0b));
  background-image: -moz-linear-gradient(#131313, #0b0b0b);
  background-image: -o-linear-gradient(#131313, #0b0b0b);
  background-image: linear-gradient(#131313, #0b0b0b)
}

.introjs-prevbutton.introjs-fullbutton {
  border: 1px solid #2b2b2b
}

.introjs-disabled,
.introjs-disabled:hover,
.introjs-disabled:focus {
  color: #656565;
  border-color: #2b2b2b;
  background-color: #0b0b0b
}

.introjs-bullets ul li a {
  background: #333
}

.introjs-bullets ul li a:hover {
  background: #555
}

.introjs-bullets ul li a.active {
  background: #555
}

.introjs-hint:hover>.introjs-hint-pulse {
  border: 5px solid rgba(195, 195, 195, 0.57)
}

.introjs-hint-pulse {
  border: 5px solid rgba(195, 195, 195, 0.27);
  background-color: rgba(119, 119, 119, 0.24);
}

.introjs-hint-dot {
  border: 10px solid rgba(109, 109, 109, 0.36)
}

/* Changes for ext/bootstrap-dropmenu.min.css */
.dropdown-container {
  background-color: #000;
  border: 1px solid #333;
  border: 1px solid rgba(1, 1, 1, 0.15);
  -webkit-box-shadow: 0 6px 12px rgba(1, 1, 1, 0.175);
  box-shadow: 0 6px 12px rgba(1, 1, 1, 0.175)
}

.dropdown-toolbar {
  background-color: #000;
  border-bottom: 1px solid rgba(1, 1, 1, 0.15)
}

.dropdown-inverse .dropdown-container {
  background-color: rgba(1, 1, 1, 0.8);
  border: 1px solid rgba(1, 1, 1, 0.9);
  color: #333333
}

.dropdown-inverse .dropdown-container>.dropdown-toolbar,
.dropdown-inverse .dropdown-container>.dropdown-footer,
.dropdown-inverse .dropdown-container>.dropdown-menu {
  border-color: #d4d4d4
}

.dropdown-inverse .dropdown-menu {
  background-color: rgba(1, 1, 1, 0.8);
  border: 1px solid rgba(1, 1, 1, 0.9)
}

.dropdown-inverse .dropdown-menu .divider {
  background-color: #d4d4d4
}

.dropdown-inverse .dropdown-menu>li>a {
  color: #333333
}

.dropdown-inverse .dropdown-menu>li>a:hover,
.dropdown-inverse .dropdown-menu>li>a:focus {
  color: #000;
  background-color: #d9d9d9
}

/* Changes for ext/chosen.1.8.2.min.css */
.chosen-container .chosen-drop {
  border: 1px solid #555;
  background: #000;
  -webkit-box-shadow: 0 4px 5px rgba(1, 1, 1, .15);
  box-shadow: 0 4px 5px rgba(1, 1, 1, .15)
}

.chosen-container .chosen-single .group-name,
.chosen-container .search-choice .group-name {
  color: #555
}
/* ... */

